--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 <div class="position">
     <div id="container">
-        <h3>Введи число от 1 до 20</h3>
-        <h3>Кто победит: ты или компьютер</h3>
-        <input type="text" placeholder="Введите число..." id="guess"> <br>
-        <button id="btn">ИГРАТЬ</button>
+        <h3>Введи число від 1 до 20</h3>
+        <h3>Хто виграє: ти чи комп'ютер</h3>
+        <input type="text" placeholder="Введи число..." id="guess"> <br>
+        <button id="btn">ГРАТИ</button>
     </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
